Fix overflow in home and carousel sections

--- a/css/main.css
+++ b/css/main.css
@@ -420,9 +420,10 @@ nav ul > li:hover {
 /*START HOME SECTION STYLES*/
 .home-div {
   width: 100%;
+  max-height: 100vh;
   display: grid;
-  grid-template-columns: 0.75fr 1fr 1fr 1fr;
-  grid-template-rows: 2.5fr 1fr;
+  grid-template-columns: 0.75fr 1fr 1fr minmax(60px, 400px);
+  grid-template-rows: 2.5fr minmax(60px, 400px);
   font-size: var(--step-3); }
 
 .home-socials {
@@ -973,9 +974,9 @@ nav ul > li:hover {
 /* Projects section style */
 .projects-div {
   display: grid;
-  grid-template-rows: 0.95fr 0.05fr;
+  grid-template-rows: minmax(350px, 800px) 50px;
   grid-template-columns: 1fr;
-  row-gap: 10%; }
+  row-gap: 30%; }
 
 .projects-div .down-svg {
   grid-row: 2 / 3;
@@ -984,12 +985,14 @@ nav ul > li:hover {
   align-self: last baseline; }
 
 .carousel-container {
+  position: relative;
   grid-row: 1 / 2;
   grid-column: 1 / 2;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%; }
+  height: 100%;
+  width: 100%; }
 
 .carousel-container input {
   display: none; }
@@ -1021,24 +1024,32 @@ nav ul > li:hover {
 
 .arrow-left {
   left: -25%; }
+  @media (max-width: 899px) {
+    .arrow-left {
+      left: 0; } }
 
 .arrow-right {
   right: -25%; }
+  @media (max-width: 899px) {
+    .arrow-right {
+      right: 0; } }
 
 .arrow-right svg {
   transform: rotate(180deg); }
 
 .cards {
+  box-sizing: border-box;
   position: relative;
-  height: 500px;
-  width: 430px;
+  height: clamp(300px, 40vmin, 500px);
+  width: clamp(310px, 34.4vw, 430px);
   margin-bottom: 20px;
   perspective: 1000px;
   transform-style: preserve-3d; }
 
 .cards label {
+  box-sizing: border-box;
   position: absolute;
-  width: 430px;
+  width: clamp(310px, 34.4vw, 430px);
   left: 0;
   right: 0;
   margin: auto;
@@ -1057,6 +1068,7 @@ nav ul > li:hover {
   justify-content: space-around; }
 
 .card .image img {
+  box-sizing: border-box;
   border-radius: 5px;
   box-shadow: 15px 15px 40px rgba(0, 0, 0, 0.5);
   margin-top: 23px;
@@ -1065,14 +1077,16 @@ nav ul > li:hover {
   object-fit: cover; }
 
 .projects-coding {
+  box-sizing: border-box;
   margin-top: 8%;
   margin-bottom: 8%; }
 
 .projects-coding div {
+  box-sizing: border-box;
   height: 2rem;
   width: 2rem;
   border-radius: 10%;
-  margin-bottom: 10px; }
+  margin: 10px; }
 
 .cpp-logo {
   background-image: url(../assets/png/ISO_C++_Logo.svg.png);
@@ -1167,6 +1181,7 @@ nav ul > li:hover {
   display: block; }
 
 .infos .name {
+  box-sizing: border-box;
   font-size: 30px;
   color: var(--current-color1);
   letter-spacing: 8px;
@@ -1287,3 +1302,12 @@ nav ul > li:hover {
   transform: translate3d(70%, 0, -220px);
   --current-color1: #ECEAED;
   --current-color2: #696c7b; }
+
+/* Styles to hide non-checked cards on mobile */
+@media (max-width: 899px) {
+  #s1:not(:checked) ~ .cards #slide1,
+  #s2:not(:checked) ~ .cards #slide2,
+  #s3:not(:checked) ~ .cards #slide3,
+  #s4:not(:checked) ~ .cards #slide4,
+  #s5:not(:checked) ~ .cards #slide5 {
+    display: none; } }
